--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
                 <ul>
                     <li><a href="#sec1">HOME</a></li>
                     <li><a href="#sec2">ABOUT</a></li>
-                    <li><a href="#">PORTFOLIO</a></li>
-                    <li><a href="#">CONTACT US</a></li>
+                    <li><a href="#portfolio">PORTFOLIO</a></li>
+                    <li><a href="#contactus">CONTACT US</a></li>
                 </ul>
             </div>
             
@@ -38,38 +38,38 @@
         <h3>Welcome To My <span style="color: green;">Profile</span></h3>
         <p>Hi! I’m Kayan, a 16-year-old graphic designer with  two years of experience. Currently in class 9, I’m passionate about transforming ideas into impactful  visuals, whether through digital illustrations, logos,  or layout designs. My work combines creativity  with attention to detail, aiming to make each project visually engaging and memorable. I’m always excited to learn new techniques and push my design skills further</p>
     </div>
-    <div class="section35">
+    <div id="portfolio" class="section35">
         <h1>My Projects</h1>
     </div>
     <div class="section4">
 <div class="card1">
     <a href="images/BABAR-X-EAGLETS-MOCKUP.jpg" target="_blank">
-        <img src="images/BABAR-X-EAGLETS-MOCKUP.jpg" alt="">
+        <img src="images/BABAR-X-EAGLETS-MOCKUP.jpg" alt="BabarXeaglets">
     </a>
 </div>
 <div class="card1">
     <a href="images/Baseball Cap Logo Mockup.png" target="_blank">
-        <img src="images/Baseball Cap Logo Mockup.png" alt="">
+        <img src="images/Baseball Cap Logo Mockup.png" alt="Baseballcard">
     </a>
 </div>
 <div class="card1">
     <a href="images/Business-Card-Mock-Up-vol-18.png" target="_blank">
-        <img src="images/Business-Card-Mock-Up-vol-18.png" alt="">
+        <img src="images/Business-Card-Mock-Up-vol-18.png" alt="Businesscard">
     </a>
 </div>
 <div class="card1">
     <a href="images/1.png" target="_blank">
-        <img src="images/1.png" alt="">
+        <img src="images/1.png" alt="1ok">
     </a>
 </div>
 <div class="card1">
     <a href="images/BABAR-X-EAGLETS.jpg" target="_blank">
-        <img src="images/BABAR-X-EAGLETS.jpg" alt="">
+        <img src="images/BABAR-X-EAGLETS.jpg" alt="babar2">
     </a>
 </div>
 <div class="card1">
     <a href="images/create-a-full-body-image-of-a-black-mannequin-dres-lfofe8U8S3yuVOl-4sMPdw-3BFc4OodTD6fhY3mqq_49Q.png" target="_blank">
-        <img src="images/create-a-full-body-image-of-a-black-mannequin-dres-lfofe8U8S3yuVOl-4sMPdw-3BFc4OodTD6fhY3mqq_49Q.png" alt="">
+        <img src="images/create-a-full-body-image-of-a-black-mannequin-dres-lfofe8U8S3yuVOl-4sMPdw-3BFc4OodTD6fhY3mqq_49Q.png" alt="Fullbody">
     </a>
 </div>
 <div class="btn1">
@@ -77,7 +77,7 @@
 </div>
 
     </div>
-    <div class="section5">
+    <div id="contactus" class="section5">
         <div class="leftside">
             <div class="first">
 <div class="icon1">
