--- a/index.html
+++ b/index.html
@@ -32,14 +32,14 @@
         </div>
     </div>
     <div id="sec2" class="section2">
-        <h1>ABOUT ME</h1>
+        <h1>ABOUT <span style="color: #29CCD9;"> ME</span></h1>
     </div>
     <div class="section3">
-        <h3>Welcome To My <span style="color: green;">Profile</span></h3>
+        <h3>Welcome To My <span style="color: #29CCD9;">Profile</span></h3>
         <p>Hi! I’m Kayan, a 16-year-old graphic designer with  two years of experience. Currently in class 9, I’m passionate about transforming ideas into impactful  visuals, whether through digital illustrations, logos,  or layout designs. My work combines creativity  with attention to detail, aiming to make each project visually engaging and memorable. I’m always excited to learn new techniques and push my design skills further</p>
     </div>
     <div id="portfolio" class="section35">
-        <h1>My Projects</h1>
+        <h1>MY <span style="color: #29CCD9;"> PROJECTS</span></h1>
     </div>
     <div class="section4">
 <div class="card1">
@@ -77,7 +77,10 @@
 </div>
 
     </div>
-    <div id="contactus" class="section5">
+    <div class="section45">
+        <h1 id="contactus">CONTACT <span style="color: #29CCD9;">ME</span></h1>
+    </div>
+    <div class="section5">
         <div class="leftside">
             <div class="first">
 <div class="icon1">
@@ -85,7 +88,7 @@
 </div>
 <div class="call">
     <div class="callus">
-        <h4>Call Me</h4>
+        <h4>CONTACT ME</h4>
     </div>
     <div class="number">
         <h4>03212823934</h4>
