--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
     </a>
 </div>
 <div class="btn1">
-    <a href="#"><button class="btn2">View more</button></a>
+    <a href="cards.html" target="_blank"><button class="btn2">View more</button></a>
 </div>
 
     </div>
